[package]
name = "bitmap"
version = "0.1.0"
authors = ["Jorge C. Leitao <jorgecarleitao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.21"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "scalar_cmp"
harness = false
